# rgb-minting-service

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  services.sh
src/: cli.rs  main.rs  setup.rs  telemetry.rs
